--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,34 +4,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Tech Blog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+        <nav>
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="homeroutes">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/public/js/profile.js">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              {{#if logged_in}}
+              <a class="nav-link" href="/profile">Profile</a>
+              {{else}}
+              <a class="nav-link" href="/login">Login</a>
+              {{/if}}
+            </li>
+            <li class="nav-item">
+              {{#if logged_in}}
+              <button class="nav-link" id="logout">Logout</button>
+              {{else}}
+              <a class="nav-link" href="/public/js/logout.js">Logout</a>
+              {{/if}}
+            </li>
+          </ul>
+        </nav>
       </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
     <footer>
-      
     </footer>
   </div>
 
