--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Loop over each object in the projects array -->
-{{#each blogs as |blog| }}
+{{#each blogs as |blogs| }}
 <div class="row mb-4 blog">
   <div class="col-md-5">
     <h2>
