--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,14 +16,14 @@
         <nav>
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="homeroutes">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/public/js/profile.js">Dashboard</a>
+             <li class="nav-item">
+              <a class="nav-link" href="/">Dashboard</a>
             </li>
             <li class="nav-item">
               {{#if logged_in}}
-              <a class="nav-link" href="/profile">Profile</a>
+              <a class="nav-link" href="/profile">Dashboard</a>
               {{else}}
               <a class="nav-link" href="/login">Login</a>
               {{/if}}
